# FastapiTest

./: .env  Dockerfile  locustfile.py  main.py  pyproject.toml  requirements.txt
